src/components/pages/blog-post/content/content.css
@layer components {
  .content {
    @apply text-lg sm:text-base;

    > *:first-child {
      @apply !mt-0;
    }

    > *:last-child {
      @apply !mb-0;
    }

    h2,
    h3,
    h4,
    h5,
    h6 {
      @apply font-semibold leading-snug;
    }

    h2 {
      @apply mt-10 mb-5 text-2xl sm:mt-8 sm:mb-4 sm:text-xl;
    }

    h3 {
      @apply mt-8 mb-5 text-xl sm:mt-6 sm:mb-4 sm:text-lg;
    }

    ul,
    ol,
    p {
      @apply my-5 sm:my-4;
    }

    strong {
      @apply font-normal;
    }

    a {
      @apply relative font-normal text-red transition-colors duration-200 hover:text-blue;
    }

    figure,
    > .gatsby-resp-image-wrapper,
    > img,
    .gatsby-highlight {
      @apply my-10 sm:my-8;
    }

    .gatsby-resp-image-figure figcaption {
      @apply mt-2 text-center text-sm font-normal text-gray-7;
    }

    ul,
    ol {
      @apply space-y-2 pl-14 md:space-y-2.5 md:pl-8;
    }

    ul {
      > li {
        @apply relative;

        &::before {
          @apply absolute top-2.5 -left-2.5 h-1.5 w-1.5 -translate-x-full rounded-full bg-red content-[''];
        }
      }
    }

    ol {
      counter-reset: custom-counter;

      > li {
        @apply relative;
        counter-increment: custom-counter;

        &::before {
          @apply absolute top-0 -left-2.5 -translate-x-full font-normal text-red;
          content: counter(custom-counter) '. ' !important;
        }
      }
    }

    pre {
      @apply scrollbar-hidden overflow-scroll rounded-lg bg-gray-1 px-6 py-4 text-base text-black md:px-4 md:py-3 md:text-sm;

      .token.atrule,
      .token.attr-value,
      .token.keyword {
        @apply text-[#0f2cbd];
      }

      .token.function,
      .token.class-name {
        @apply text-[#d41153];
      }

      .token.operator,
      .token.entity,
      .token.url,
      .language-css .token.string,
      .style .token.string {
        @apply text-[#7e428a];
      }

      .token.property,
      .token.tag,
      .token.boolean,
      .token.number,
      .token.constant,
      .token.symbol,
      .token.deleted {
        @apply text-[#82174c];
      }

      .token.selector,
      .token.attr-name,
      .token.string,
      .token.char,
      .token.builtin,
      .token.inserted {
        @apply text-[#00994c];
      }

      .token.punctuation {
        @apply text-[#737373];
      }

      .token.comment,
      .token.prolog,
      .token.doctype,
      .token.cdata {
        @apply text-[#a6a6a6];
      }
    }

    :not(pre) > code {
      @apply break-words rounded-sm bg-gray-1 px-1.5 py-0.5 text-base text-[#d41153] md:px-1 md:py-px md:text-sm;
    }

    iframe,
    video {
      @apply mx-auto max-w-full;
    }
  }
}

